--- a/website/app/components/project/processes/mc-project-processes.html
+++ b/website/app/components/project/processes/mc-project-processes.html
@@ -3,7 +3,7 @@
                 md-is-locked-open="true">
         <div layout="column" layout-align="center end">
             <md-button ui-sref="project.processes.new({process:'As Received', process_id:''})"
-                       layout-align="center end">
+                       layout-align="center end" class="md-primary">
                 <i class="fa fa-fw fa-plus"></i>Create New Process
             </md-button>
         </div>
