--- a/website/app/components/process/mc-process.html
+++ b/website/app/components/process/mc-process.html
@@ -1,9 +1,9 @@
-<div layout="column" layout-margin layout-fill>
+<div layout="column" layout-margin layout-fill layout-wrap>
     <h3 class="md-title">{{$ctrl.process.name}}</h3>
-    <div layout="row">
-        <span class="md-subhead"><i class="fa fa-calendar"></i>{{$ctrl.process.birthtime | toDateString}}</span>
-        <span flex="10"></span>
-        <span class="md-subhead"><i class="fa fa-user"></i>{{$ctrl.process.owner}}</span>
+    <div layout="row" flex="60" layout-align="space-around center">
+        <span class="md-subhead-light"><i class="fa fa-calendar"></i>{{$ctrl.process.birthtime | toDateString}}</span>
+        <span class="md-subhead-light"><i class="fa fa-user"></i>{{$ctrl.process.owner}}</span>
+        <span flex="40"></span>
     </div>
 
     <md-tabs md-selected="$ctrl.currentTab" md-dynamic-height md-border-bottom>
