Add project settings.

--- a/website/app/components/project/mc-project-navbar.html
+++ b/website/app/components/project/mc-project-navbar.html
@@ -28,7 +28,7 @@
             <!--</md-tab>-->
             <md-tab ui-sref="project.settings">
                 <md-tab-label>
-                    <span><i class="fa fa-fw fa-gear"></i>Settings</span>
+                    <span><i class="fa fa-fw fa-gears"></i>Settings</span>
                 </md-tab-label>
             </md-tab>
         </md-tabs>
