--- a/website/app/components/projects/mc-projects.html
+++ b/website/app/components/projects/mc-projects.html
@@ -1,6 +1,6 @@
 <div layout="row" flex="100" layout-fill>
     <div layout="column" flex>
-        <navbar search="projects"></navbar>
+        <!--<navbar search="projects"></navbar>-->
         <div layout="row">
             <md-button class="md-primary md-raised" ng-click="$ctrl.toggleSidenav()">create project</md-button>
         </div>
