On page refresh set the active project tab to the correct tab setting.

--- a/website/app/components/project/mc-project-navbar.html
+++ b/website/app/components/project/mc-project-navbar.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-align="center center" class="md-mc-primary-color-hue-2-bg">
     <div flex="70">
-        <md-tabs md-selected="ctrl.currentTab" class="md-primary md-hue-2" md-dynamic-height md-border-bottom>
+        <md-tabs md-selected="$ctrl.currentTab" class="md-primary md-hue-2" md-dynamic-height md-border-bottom>
             <md-tab ui-sref="project.home">
                 <md-tab-label>
                     <span><i class="fa fa-fw fa-home"></i>Home</span>
