--- a/website/app/components/user/mc-user-password.html
+++ b/website/app/components/user/mc-user-password.html
@@ -3,17 +3,18 @@
     <div flex="30">
         <form>
             <md-input-container class="md-block">
-                <input id="inputPassword" placeholder="New Password..." ng-model="$ctrl.newPassword" type="text">
+                <input id="inputPassword" placeholder="New Password..." ng-model="$ctrl.newPassword" type="password">
             </md-input-container>
 
             <md-input-container class="md-block">
                 <input placeholder="Verify Password..."
                        ng-model="$ctrl.verifyNewPassword"
+                       on-enter="$ctrl.changePassword()"
                        type="password">
                 <md-button ng-click="$ctrl.changePassword()" class="md-primary">
                     Change Password
                 </md-button>
-                <md-button class="md-warn">Cancel</md-button>
+                <md-button class="md-warn" ng-click="$ctrl.cancel()">Cancel</md-button>
             </md-input-container>
         </form>
     </div>
