Project name will take you to project home page. Add a $rootScope.$on for successful state changes so that the tab can be correctly set.

--- a/website/app/components/project/mc-project-navbar.html
+++ b/website/app/components/project/mc-project-navbar.html
@@ -35,7 +35,7 @@
     </div>
     <span flex></span>
     <div class="row" layout-margin>
-        <span class="md-title" style="color: white">{{$ctrl.project.name}}</span>
+        <a class="md-title" style="color: white" ui-sref="project.home">{{$ctrl.project.name}}</a>
         <a style="color:white;" ui-sref="projects">change</a>
     </div>
 </div>
