--- a/website/app/components/projects/mc-projects.html
+++ b/website/app/components/projects/mc-projects.html
@@ -5,7 +5,7 @@
             <md-button class="md-primary md-raised" ng-click="$ctrl.toggleSidenav()">create project</md-button>
         </div>
         <md-content layout="row" layout-sm="column" layout-wrap layout-align="start stretch" flex>
-            <div flex="25" flex-sm="100" ng-repeat="project in $ctrl.projects | orderBy:'name'">
+            <div flex="25" flex-md="33" ng-repeat="project in $ctrl.projects | orderBy:'name'">
                 <md-card class="md-primary">
                     <md-card-header ng-click="$ctrl.openProject(project.id)"
                                     class="cursor-pointer md-mc-project-card-header">
@@ -16,17 +16,21 @@
                             </span>
                         </md-card-avatar>
                         <md-card-header-text>
-                            <span class="md-title">{{project.name}} ({{project.owner}})</span>
-                            <span class="md-subhead" layout="row" flex="80" layout-align="space-between center">
-                                <span><i class="fa fa-fw fa-code-fork"></i>{{project.processes.length | number}}</span>
-                                <span><i class="fa fa-fw fa-cubes"></i>{{project.samples.length | number}}</span>
-                                <span><i class="fa fa-fw fa-files-o"></i>{{project.file_count | number}}</span>
-                            </span>
+                            <span class="md-title">{{project.name | truncate:40:'...'}}</span>
+                            <span class="md-subhead">{{project.owner | truncate:40:'...'}}</span>
                         </md-card-header-text>
                     </md-card-header>
                     <img ng-if="project.image" ng-src="{{project.image}}" class="md-card-image">
                     <md-card-actions layout="row" layout-align="start center">
-                        <md-button class="md-primary" ui-sref="project.settings({project_id: project.id})">Manage Users</md-button>
+                        <md-button class="md-primary" ui-sref="project.settings({project_id: project.id})">Manage
+                            Users
+                        </md-button>
+                        <span flex></span>
+                        <span class="md-subhead" layout="row" flex="60" layout-align="space-between center">
+                            <span><i class="fa fa-fw fa-code-fork"></i>{{project.processes.length | number}}</span>
+                            <span><i class="fa fa-fw fa-cubes"></i>{{project.samples.length | number}}</span>
+                            <span><i class="fa fa-fw fa-files-o"></i>{{project.file_count | number}}</span>
+                        </span>
                     </md-card-actions>
                 </md-card>
             </div>
