--- a/website/app/components/projects/mc-projects.html
+++ b/website/app/components/projects/mc-projects.html
@@ -4,8 +4,8 @@
         <div layout="row">
             <md-button class="md-primary md-raised" ng-click="$ctrl.toggleSidenav()">create project</md-button>
         </div>
-        <md-content layout="row" layout-sm="column" layout-wrap layout-align="start stretch" flex>
-            <div flex="25" flex-md="33" ng-repeat="project in $ctrl.projects | orderBy:'name'">
+        <md-content layout="row" layout-wrap layout-align="start stretch" flex>
+            <div flex="25" flex-md="33" flex-sm="60" ng-repeat="project in $ctrl.projects | orderBy:'name'">
                 <md-card class="md-primary">
                     <md-card-header ng-click="$ctrl.openProject(project.id)"
                                     class="cursor-pointer md-mc-project-card-header">
