Start putting process and sample creation back into the system.

--- a/website/app/components/project/mc-project-home.html
+++ b/website/app/components/project/mc-project-home.html
@@ -18,7 +18,9 @@
                             </a>
                         </md-card-title-text>
                         <md-card-actions layout="row" layout-align="center center">
-                            <md-button>New Process</md-button>
+                            <md-button ng-click="$ctrl.chooseTemplate()">
+                                New Process
+                            </md-button>
                             <md-button class="text-black">View</md-button>
                         </md-card-actions>
                     </md-card-title>
