--- a/website/app/components/process/create/process-settings.html
+++ b/website/app/components/process/create/process-settings.html
@@ -1,40 +1,29 @@
-<div>
-    <h4>Setup</h4>
+<div layout="column">
+    <h4 class="md-title">Setup</h4>
 
-    <div class="row" ng-form="ctrl.settingForm" ng-repeat="setting in ctrl.settings">
+    <div ng-form="ctrl.settingForm" ng-repeat="setting in ctrl.settings">
         <div ng-switch="setting.property._type">
 
             <!--------- number --------->
             <div ng-switch-when="number">
-                <label class="col-xs-4 control-label">
-                    {{::setting.property.name}}
-                    <i ng-if="setting.property.required" class="fa fa-asterisk text-danger"></i>
-                </label>
-
-                <div class="col-xs-6">
-                    <div class="col-xs-8">
+                <div layout="row">
+                    <md-input-container>
+                        <label>{{::seting.property.name}}</label>
                         <input type="number"
                                name="numberInput"
                                step="any"
                                class="form-control"
                                ng-required="setting.property.required"
                                ng-model="setting.property.value">
-
-                        <div ng-if="ctrl.mainSettingForm.$submitted || ctrl.mainSettingForm.$touched"
-                             ng-messages="ctrl.settingForm.numberInput.$error" class="errors">
-                            <div ng-message="number">Please enter number.</div>
-                            <div ng-message="required">This is a required field.</div>
-                        </div>
-                    </div>
+                    </md-input-container>
                     <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
-                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
-                            <select ng-model="setting.property.unit" data-placeholder="Choose"
-                                    class="form-control"
-                                    ng-options="unit for unit in setting.property.units"
-                                    ng-required="setting.property.required">
-                            </select>
-                        </span>
-                    <span class="help-block">{{::setting.property.description}}</span>
+                    <span ng-if="setting.property.units.length !== 0">
+                        <select ng-model="setting.property.unit" data-placeholder="Choose"
+                                class="form-control"
+                                ng-options="unit for unit in setting.property.units"
+                                ng-required="setting.property.required">
+                        </select>
+                    </span>
                 </div>
             </div>
 
