Refactor original sample creation into a set of services to make the controller simpler.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -163,6 +163,15 @@ table.md-table th.md-column {
     margin-left: 10px;
 }
 
+.units-align {
+    margin-bottom: 43px;
+    margin-left: 10px;
+}
+
+.margin-top-10 {
+    margin-top:10px;
+}
+
 /* *************** End Materials Design CSS *************** */
 
 .h1custom {
