--- a/website/app/project/processes/process/create/components/periodic-table.html
+++ b/website/app/project/processes/process/create/components/periodic-table.html
@@ -329,10 +329,10 @@
                     </div>
                 </li>
                 <li>
-                    <button class="btn btn-success btn-default"
+                    <md-button class="md-primary md-raised"
                             ng-click="ctrl.addElementFromInput()">
                         Add
-                    </button>
+                    </md-button>
                 </li>
             </ul>
         </div>
