--- a/website/app/project/processes/process/create/components/process-settings.html
+++ b/website/app/project/processes/process/create/components/process-settings.html
@@ -39,20 +39,24 @@
 
                     <!--------- selection --------->
                     <div ng-switch-when="selection">
-                        <md-input-container class="md-block">
-                            <label>{{::setting.property.name}}</label>
-                            <md-select ng-model="setting.property.value">
-                                <md-option ng-value="choice"
-                                           ng-repeat="choice in setting.property.choices" ng-selected="$first">
-                                    {{choice.name}}
-                                </md-option>
-                            </md-select>
-                        </md-input-container>
-                        <div ng-if="setting.property.value.name === 'Other'">
-                            <md-input-container class="md-block" md-no-float>
-                                <label>Specify {{setting.property.name}}...</label>
-                                <input type="text" ng-model="setting.property.value.value">
+                        <div style="margin-top:45px">
+                            <md-input-container class="md-block">
+                                <label>{{::setting.property.name}}</label>
+                                <md-select ng-model="setting.property.value">
+                                    <md-option ng-value="choice"
+                                               ng-repeat="choice in setting.property.choices" ng-selected="$first">
+                                        {{choice.name}}
+                                    </md-option>
+                                </md-select>
                             </md-input-container>
+                        </div>
+                        <div ng-if="setting.property.value.name === 'Other'">
+                            <div style="margin-top:45px">
+                                <md-input-container class="md-block" md-no-float>
+                                    <label>Specify {{setting.property.name}}...</label>
+                                    <input type="text" ng-model="setting.property.value.value">
+                                </md-input-container>
+                            </div>
                         </div>
                     </div>
 
