Move menu of items for creating a process into a component. On the home page the menu changes the size of the process box. Add an adjustment to make all boxes the same size.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -16,6 +16,11 @@ md-tabs.mc-tabs md-ink-bar, md-tabs.mc-tabs md-ink-bar {
     background-color: black !important;
 }
 
+.mc-md-card-title-home-adj {
+    padding-top: 26px;
+    padding-bottom: 18px;
+}
+
 .project-card:hover {
     background-color: #2196f3;
 }
